Hardcode and style changes

--- a/app/base/templates/includes/sidebar.html
+++ b/app/base/templates/includes/sidebar.html
@@ -46,7 +46,7 @@
                     <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fas fa-exclamation-triangle mt-2" style="font-size: 15px; color: #3A416F;"></i>
                     </div>
-                    <span class="nav-link-text ms-1">Emergency</span>
+                    <span class="nav-link-text ms-1">Find an ER</span>
                 </a>
             </li>
 
@@ -78,14 +78,14 @@
             </li> -->
 
             <!-- profile -->
-            <li class="nav-item mb-1">
+            <!-- <li class="nav-item mb-1">
                 <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">
                     <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fas fa-user-md mt-2" style="font-size: 15px; color: #3A416F;"></i>
                     </div>
                     <span class="nav-link-text ms-1">Profile</span>
                 </a>
-            </li>
+            </li> -->
             <!-- billing -->
             <!-- <li class="nav-item mb-1">
                 <a class="nav-link {% if 'billing' in segment %} active {% endif %}" href="/billing.html">
