--- a/app/base/templates/layouts/base.html
+++ b/app/base/templates/layouts/base.html
@@ -10,7 +10,8 @@
     <title>
         UNdisEASE - {% block title %}{% endblock %}
     </title>
-
+    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <link href="/static/assets/css/nucleo-icons.css" rel="stylesheet" />
     <link href="/static/assets/css/nucleo-svg.css" rel="stylesheet" />
