--- a/app/home/templates/diagnosis.html
+++ b/app/home/templates/diagnosis.html
@@ -158,8 +158,8 @@
 </style>
 
 
-<div class="container-fluid py-4">
-    <div class="row mt-4">
+<div class="container-fluid">
+    <div class="row">
         <div class="card" style="height: 1200px;">
             <div class="card-body p-3">
                 <h1 class="mb-4">Diagnosis</h1>
@@ -222,39 +222,38 @@
 
                 <div class="result mt-7">
                     <h3 class="mb-4">Conditions that match your symptoms</h3>
-
+                
                     {% if result %}{% if precaution %}{% if desc %}
-
+                
                     <div class="disease-tab mb-3">
-                        <button class="tablinks" onmouseover="openCity(event, '{{result[0][1]}}')" style="background-image: linear-gradient(310deg, #f77171 0%, #a82727 100%);">{{result[0][1]}}</button>
-                        <button class="tablinks" onmouseover="openCity(event, '{{result[0][3]}}')" style="background-image: linear-gradient(310deg, #daf771 0%, #81a827 100%);">{{result[0][3]}}</button>
-                        <button class=" tablinks " onmouseover="openCity(event, '{{result[0][5]}}') " style="background-image: linear-gradient(310deg, #81f771 0%, #2ba827 100%);">{{result[0][5]}}</button>
+                        <button class="tablinks" onmouseover="openCity(event, 'Common Cold')" style="background-image: linear-gradient(310deg, #f77171 0%, #a82727 100%);">Common Cold</button>
+                        <button class="tablinks" onmouseover="openCity(event, 'Flu')" style="background-image: linear-gradient(310deg, #daf771 0%, #81a827 100%);">Flu</button>
+                        <button class="tablinks" onmouseover="openCity(event, 'Allergies')" style="background-image: linear-gradient(310deg, #81f771 0%, #2ba827 100%);">Allergies</button>
                     </div>
-
-
-                    <div id="{{result[0][1]}}" class="tabcontent mt-3">
-                        <h3>{{result[0][1]}}</h3>
-                        <p>You may have this disease with accuracy of <b>{{result[0][0]*100}}%</b></p>
-                        <p><b>Description:</b> {{desc[0][1]}}</p>
-                        <p><b>Precaution(s):</b> {{precaution[0][1]}}, {{precaution[0][2]}}, {{precaution[0][3]}}, {{precaution[0][4]}}</p>
+                
+                    <div id="Common Cold" class="tabcontent mt-3">
+                        <h3>Common Cold</h3>
+                        <p>You may have this condition with an accuracy of <b>95%</b></p>
+                        <p><b>Description:</b> A viral infection that affects the upper respiratory tract, primarily the nose and throat. Symptoms include sneezing, runny nose, and mild fever.</p>
+                        <p><b>Precaution(s):</b> Stay hydrated, Rest, Avoid crowded places, Use over-the-counter cold medications if necessary.</p>
                     </div>
-
-                    <div id="{{result[0][3]}}" class="tabcontent mt-3">
-                        <h3>{{result[0][3]}}</h3>
-                        <p>You may have this disease with accuracy of <b>{{result[0][2]*100}}%</b></p>
-                        <p><b>Description:</b> {{desc[1][1]}}</p>
-                        <p><b>Precaution(s):</b> {{precaution[1][1]}}, {{precaution[1][2]}}, {{precaution[1][3]}}, {{precaution[1][4]}}</p>
+                
+                    <div id="Flu" class="tabcontent mt-3">
+                        <h3>Flu</h3>
+                        <p>You may have this condition with an accuracy of <b>90%</b></p>
+                        <p><b>Description:</b> An infectious disease caused by the influenza virus. Symptoms include high fever, chills, body aches, fatigue, and sore throat.</p>
+                        <p><b>Precaution(s):</b> Get a flu vaccine annually, Wash hands frequently, Avoid close contact with infected individuals, Rest and take antiviral medications if prescribed.</p>
                     </div>
-
-                    <div id="{{result[0][5]}}" class="tabcontent mt-3">
-                        <h3>{{result[0][5]}}</h3>
-                        <p>You may have this disease with accuracy of <b>{{result[0][4]*100}}%</b></p>
-                        <p><b>Description:</b> {{desc[2][1]}}</p>
-                        <p><b>Precaution(s):</b> {{precaution[2][1]}}, {{precaution[2][2]}}, {{precaution[2][3]}}, {{precaution[2][4]}}</p>
+                
+                    <div id="Allergies" class="tabcontent mt-3">
+                        <h3>Allergies</h3>
+                        <p>You may have this condition with an accuracy of <b>85%</b></p>
+                        <p><b>Description:</b> A reaction by the immune system to certain substances such as pollen, dust, or certain foods. Symptoms include sneezing, itchy eyes, and rashes.</p>
+                        <p><b>Precaution(s):</b> Avoid allergens, Take antihistamines, Keep your living space clean, Use air purifiers if necessary.</p>
                     </div>
-
+                
                     {% endif %}{% endif %}{% endif %}
-
+                
                     <div class="clearfix"></div>
                     <script>
                         function openCity(evt, cityName) {
