--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %} {% block title %} Dashboard {% endblock title %}
 
-<!-- Specific CSS goes HERE -->
+    <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
 <div class="container-fluid py-4">
@@ -148,23 +148,33 @@
             </a>
         </div>
     </div>
-    <!-- Emergency -->
-    <div class="row mt-4">
-        <div class="col-lg-12">
-            <div class="card h-100">
-                <div class="overflow-hidden position-relative border-radius-xl bg-cover h-100" style="background-image: url('/static/assets/img/ivancik.jpg');">
-                    <span class=" mask bg-gradient-dark "></span>
-                    <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3 col-lg-6 ">
-                        <h5 class="text-white font-weight-bolder mb-4 pt-2 ">Emergency</h3>
-                            <p class="text-white ">Don't be late to cure yourself. Hurry up!!</p>
-                            <a class="text-white text-sm font-weight-bold mb-0 icon-move-right mt-auto " href="emergency.html">
-                                Read More <i class="fas fa-arrow-right text-sm ms-1 " aria-hidden="true "></i>
-                            </a>
+<!-- Emergency -->
+<div class="row mt-4">
+    <div class="col-lg-12">
+        <div class="card h-100">
+            <div class="overflow-hidden position-relative border-radius-xl bg-cover h-100" style="background-color: #1A936F;">
+                
+                <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3 col-lg-6">
+                    <h5 class="text-white font-weight-bolder mb-4 pt-2">Emergency</h5>
+                    <p class="text-white">Don't be late to cure yourself. Hurry up!!</p>
+                    <div class="d-flex justify-content-between mt-3">
+                        <!-- Call 911 Button -->
+                        <a href="tel:911" class="btn btn-danger d-flex align-items-center justify-content-center" style="padding: 10px 20px; border-radius: 25px; font-weight: bold; font-size: 14px;">
+                            <i class="fas fa-phone-alt me-2"></i> Call 911
+                        </a>
+                        <!-- Call McKinley Button -->
+                        <a href="tel:+12173333833" class="btn btn-primary d-flex align-items-center justify-content-center" style="padding: 10px 20px; border-radius: 25px; font-weight: bold; font-size: 14px;">
+                            <i class="fas fa-phone-alt me-2"></i> Call McKinley
+                        </a>
                     </div>
+                    <a class="text-white text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="emergency.html">
+                        Read More <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
     {% include "includes/footer.html " %}
 
