--- a/app/base/templates/includes/sidebar.html
+++ b/app/base/templates/includes/sidebar.html
@@ -32,11 +32,11 @@
 
             <!-- Appointment -->
             <li class="nav-item mb-1">
-                <a class="nav-link {% if 'rtl' in segment %} active {% endif %}" href="/appoinment.html">
+                <a class="nav-link {% if 'rtl' in segment %} active {% endif %}" href="/appointments.html">
                     <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="far fa-calendar-check mt-2" style="font-size: 15px; color: #3A416F;"></i>
                     </div>
-                    <span class="nav-link-text ms-1">Appointment</span>
+                    <span class="nav-link-text ms-1">Appointments</span>
                 </a>
             </li>
 
