--- a/app/base/templates/includes/fixed-plugin.html
+++ b/app/base/templates/includes/fixed-plugin.html
@@ -13,7 +13,7 @@
                         <div class="col-12">
                             <div class="card mb-4">
                                 <div class="card-header pb-0">
-                                    <h6>Near By Hospitals</h6>
+                                    <h6>Nearby Hospitals</h6>
                                 </div>
                                 <div class="card-body px-0 pt-0 pb-2">
                                     <div class="table-responsive p-0">
@@ -22,12 +22,6 @@
                                                 <tr>
                                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                                                         Hospitals</th>
-                                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                                        Location</th>
-                                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                                        Status</th>
-                                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
-                                                        Timings</th>
                                                     <th></th>
                                                 </tr>
                                             </thead>
@@ -35,20 +29,11 @@
                                                 <tr>
                                                     <td>
                                                         <div class="d-flex px-2">
-
                                                             <div class="my-auto">
-                                                                <h6 class="mb-0 text-sm">Apollo Hospitals</h6>
+                                                                <h6 class="mb-0 text-sm">McKinley Health Center</h6>
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td>
-                                                        <p class="text-sm font-weight-bold mb-0">CBD Belapur, Mumbai</p>
-                                                    </td>
-                                                    <td>
-                                                        <span class="text-xs font-weight-bold">Open</span>
-                                                    </td>
-                                                    <td class="align-middle text-center">
-                                                        <span class="text-xs font-weight-bold">24X7</span </td>
                                                     <td class="align-middle">
                                                         <button class="btn btn-link text-secondary mb-0">
                                                             <i class="fa fa-phone-alt text-xs"></i>
@@ -58,23 +43,13 @@
                                                 <tr>
                                                     <td>
                                                         <div class="d-flex px-2">
-
                                                             <div class="my-auto">
-                                                                <h6 class="mb-0 text-sm">Balaji Hospital</h6>
+                                                                <h6 class="mb-0 text-sm">Carle Foundation Hospital</h6>
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td>
-                                                        <p class="text-sm font-weight-bold mb-0">Kamothe, Mumbai</p>
-                                                    </td>
-                                                    <td>
-                                                        <span class="text-xs font-weight-bold">Closed</span>
-                                                    </td>
-                                                    <td class="align-middle text-center">
-                                                        <span class="text-xs font-weight-bold">Opens 8 am</span>
-                                                    </td>
                                                     <td class="align-middle">
-                                                        <button class="btn btn-link text-secondary mb-0" aria-haspopup="true" aria-expanded="false">
+                                                        <button class="btn btn-link text-secondary mb-0">
                                                             <i class="fa fa-phone-alt text-xs"></i>
                                                         </button>
                                                     </td>
@@ -82,23 +57,13 @@
                                                 <tr>
                                                     <td>
                                                         <div class="d-flex px-2">
-
                                                             <div class="my-auto">
-                                                                <h6 class="mb-0 text-sm">Ozone Hospital</h6>
+                                                                <h6 class="mb-0 text-sm">OSF Heart of Mary Medical Center</h6>
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td>
-                                                        <p class="text-sm font-weight-bold mb-0">Kamothe, Mumbai</p>
-                                                    </td>
-                                                    <td>
-                                                        <span class="text-xs font-weight-bold">Closed</span>
-                                                    </td>
-                                                    <td class="align-middle text-center">
-                                                        <span class="me-2 text-xs font-weight-bold">Opens 8 am</span>
-                                                    </td>
                                                     <td class="align-middle">
-                                                        <button class="btn btn-link text-secondary mb-0" aria-haspopup="true" aria-expanded="false">
+                                                        <button class="btn btn-link text-secondary mb-0">
                                                             <i class="fa fa-phone-alt text-xs"></i>
                                                         </button>
                                                     </td>
@@ -106,29 +71,17 @@
                                                 <tr>
                                                     <td>
                                                         <div class="d-flex px-2">
-
                                                             <div class="my-auto">
-                                                                <h6 class="mb-0 text-sm">Apex Multispeciality Hospital
-                                                                </h6>
+                                                                <h6 class="mb-0 text-sm">Convenient Care Plus (Carle)</h6>
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td>
-                                                        <p class="text-sm font-weight-bold mb-0">Taloja, Mumbai</p>
-                                                    </td>
-                                                    <td>
-                                                        <span class="text-xs font-weight-bold">Closed</span>
-                                                    </td>
-                                                    <td class="align-middle text-center">
-                                                        <span class="me-2 text-xs font-weight-bold">Opens 7 am</span>
-                                                    </td>
                                                     <td class="align-middle">
-                                                        <button class="btn btn-link text-secondary mb-0" aria-haspopup="true" aria-expanded="false">
+                                                        <button class="btn btn-link text-secondary mb-0">
                                                             <i class="fa fa-phone-alt text-xs"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
-
                                             </tbody>
                                         </table>
                                     </div>
@@ -143,16 +96,9 @@
                 <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
                     <i class="fa fa-close"></i>
                 </button>
-
             </div>
             <!-- End Toggle Button -->
-
         </div>
         <hr class="horizontal dark my-1">
-
-
-
-
-
     </div>
 </div>
