--- a/app/home/templates/emergency.html
+++ b/app/home/templates/emergency.html
@@ -26,7 +26,7 @@
         <div class="col-12">
             <div class="card mb-4">
                 <div class="card-header pb-0">
-                    <h6>Near By Hospitals</h6>
+                    <h6>Nearby Hospitals</h6>
                 </div>
                 <div class="card-body px-0 pt-0 pb-2">
                     <div class="table-responsive p-0">
@@ -44,38 +44,59 @@
                                 <tr>
                                     <td>
                                         <div class="d-flex px-2">
-
                                             <div class="my-auto">
-                                                <h6 class="mb-0 text-sm">Apollo Hospitals</h6>
+                                                <h6 class="mb-0 text-sm">Carle Foundation Hospital</h6>
                                             </div>
                                         </div>
                                     </td>
                                     <td>
-                                        <p class="text-sm font-weight-bold mb-0">CBD Belapur, Mumbai</p>
+                                        <p class="text-sm font-weight-bold mb-0">611 W Park St, Urbana, IL</p>
                                     </td>
                                     <td>
                                         <span class="text-xs font-weight-bold">Open</span>
                                     </td>
                                     <td class="align-middle text-center">
-                                        <span class="text-xs font-weight-bold">24X7</span
+                                        <span class="text-xs font-weight-bold">24X7</span>
                                     </td>
                                     <td class="align-middle">
-                                        <button class="btn btn-link text-secondary mb-0">
-                        <i class="fa fa-phone-alt text-xs"></i>
-                      </button>
+                                        <a href="tel:+12173373000" class="btn btn-link text-secondary mb-0">
+                                            <i class="fa fa-phone-alt text-xs"></i>
+                                        </a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <div class="d-flex px-2">
-                                            
                                             <div class="my-auto">
-                                                <h6 class="mb-0 text-sm">Balaji Hospital</h6>
+                                                <h6 class="mb-0 text-sm">OSF Heart of Mary Medical Center</h6>
                                             </div>
                                         </div>
                                     </td>
                                     <td>
-                                        <p class="text-sm font-weight-bold mb-0">Kamothe, Mumbai</p>
+                                        <p class="text-sm font-weight-bold mb-0">1400 W Park St, Urbana, IL</p>
+                                    </td>
+                                    <td>
+                                        <span class="text-xs font-weight-bold">Open</span>
+                                    </td>
+                                    <td class="align-middle text-center">
+                                        <span class="text-xs font-weight-bold">24X7</span>
+                                    </td>
+                                    <td class="align-middle">
+                                        <a href="tel:+12173373331" class="btn btn-link text-secondary mb-0">
+                                            <i class="fa fa-phone-alt text-xs"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="d-flex px-2">
+                                            <div class="my-auto">
+                                                <h6 class="mb-0 text-sm">Christie Clinic</h6>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <p class="text-sm font-weight-bold mb-0">3101 Fields S Dr, Champaign, IL</p>
                                     </td>
                                     <td>
                                         <span class="text-xs font-weight-bold">Closed</span>
@@ -84,60 +105,34 @@
                                         <span class="text-xs font-weight-bold">Opens 8 am</span>
                                     </td>
                                     <td class="align-middle">
-                                        <button class="btn btn-link text-secondary mb-0" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-phone-alt text-xs"></i>
-                      </button>
+                                        <a href="tel:+12173527230" class="btn btn-link text-secondary mb-0">
+                                            <i class="fa fa-phone-alt text-xs"></i>
+                                        </a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <div class="d-flex px-2">
-
                                             <div class="my-auto">
-                                                <h6 class="mb-0 text-sm">Ozone Hospital</h6>
+                                                <h6 class="mb-0 text-sm">Promise Healthcare</h6>
                                             </div>
                                         </div>
                                     </td>
                                     <td>
-                                        <p class="text-sm font-weight-bold mb-0">Kamothe, Mumbai</p>
+                                        <p class="text-sm font-weight-bold mb-0">819 Bloomington Rd, Champaign, IL</p>
                                     </td>
                                     <td>
                                         <span class="text-xs font-weight-bold">Closed</span>
                                     </td>
                                     <td class="align-middle text-center">
-                                        <span class="me-2 text-xs font-weight-bold">Opens 8 am</span>
+                                        <span class="text-xs font-weight-bold">Opens 7 am</span>
                                     </td>
                                     <td class="align-middle">
-                                        <button class="btn btn-link text-secondary mb-0" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-phone-alt text-xs"></i>
-                      </button>
+                                        <a href="tel:+12173525300" class="btn btn-link text-secondary mb-0">
+                                            <i class="fa fa-phone-alt text-xs"></i>
+                                        </a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2">
-
-                                            <div class="my-auto">
-                                                <h6 class="mb-0 text-sm">Apex Multispeciality Hospital</h6>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-sm font-weight-bold mb-0">Taloja, Mumbai</p>
-                                    </td>
-                                    <td>
-                                        <span class="text-xs font-weight-bold">Closed</span>
-                                    </td>
-                                    <td class="align-middle text-center">
-                                        <span class="me-2 text-xs font-weight-bold">Opens 7 am</span>
-                                    </td>
-                                    <td class="align-middle">
-                                        <button class="btn btn-link text-secondary mb-0" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-phone-alt text-xs"></i>
-                      </button>
-                                    </td>
-                                </tr>
-
                             </tbody>
                         </table>
                     </div>
@@ -145,8 +140,6 @@
             </div>
         </div>
     </div>
-
-
 
     {% include "includes/footer.html" %}
 
