--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -3,7 +3,7 @@
     <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-<div class="container-fluid py-4">
+<div class="container-fluid py-2">
     <!-- Diagnosis -->
     <div class="row">
         <div class="col-lg-12 mb-lg-0 mb-4">
@@ -11,13 +11,13 @@
                 <div class="card-body p-3">
                     <div class="row">
                         <div class="col-lg-6">
-                            <div class="d-flex flex-column h-100">
-                                <p class="mb-1 pt-2 text-bold">First step towards curing yourself.</p>
-                                <h3 class="font-weight-bolder">Diagnosis</h3>
+                            <div class="d-flex flex-column h-60">
+                                <p class="mb-1 pt-1 text-bold">First step towards curing yourself.</p>
+                                <h3 class="font-weight-bolder mb-0">Diagnosis</h3>
                                 <!-- <p class="mb-5">First step towards curing yourself. Feel free to diagnoise yourself. Hurry up!! you're few clicks away from better health.</p> -->
                                 <!-- <p class="mb-1">Manage your health online and get assistance on how to improve your health online with no human interaction.</p> -->
                                 <br>
-                                <p class="mb-4">Hurry up!! you're few clicks away from better health.</p>
+                                <p class="mb-0">Hurry up!! you're few clicks away from better health.</p>
                                 <br>
                                 <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="{{url_for('home_blueprint.diagnose')}}">
                                     Diagnose yourself <i class="fas fa-arrow-right text-sm ms-1"
@@ -27,7 +27,7 @@
                         </div>
                         <div class="col-lg-3 ms-auto text-center mt-5 mt-lg-0">
                             <div class="bg-gradient-primary border-radius-lg h-100">
-                                <img src="/static/assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
+                                <img src="/static/assets/img/shapes/waves-white.svg" class="position-absolute h-60 w-30 top-0 d-lg-block d-none" alt="waves">
                                 <div class="position-relative d-flex align-items-center justify-content-center h-100">
                                     <img class="w-50 position-relative z-index-2 pt-4" alt="" src="/static/assets/img/illustrations/diagnosis.png">
                                 </div>
@@ -46,7 +46,7 @@
         </div>
         <div class="row appointment-tabs">
             <!-- MBBS -->
-            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-2">
                 <div class="card">
                     <div class="card-body p-3">
                         <div class="row">
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <!-- Skin Specialist -->
-            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-2">
                 <div class="card">
                     <div class="card-body p-3">
                         <div class="row">
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <!-- Cardio Specialist -->
-            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-2">
                 <div class="card">
                     <div class="card-body p-3">
                         <div class="row">
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <!-- Orthopedic Doctor -->
-            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+            <div class="col-xl-3 col-sm-6 mb-xl-0 mb-2">
                 <div class="card">
                     <div class="card-body p-3">
                         <div class="row">
@@ -142,28 +142,28 @@
                 </div>
             </div>
         </div>
-        <div class="mt-3">
+        <div class="mt-2">
             <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="{{ url_for('base_blueprint.add_appoinment') }}">
                 &nbsp;&nbsp;&nbsp;Schedule your Appointments <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
             </a>
         </div>
     </div>
 <!-- Emergency -->
-<div class="row mt-4">
+<div class="row mt-2">
     <div class="col-lg-12">
         <div class="card h-100">
-            <div class="overflow-hidden position-relative border-radius-xl bg-cover h-100" style="background-color: #1A936F;">
+            <div class="overflow-hidden position-relative border-radius-xl bg-cover h-80" style="background-color: #1A936F;">
                 
-                <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3 col-lg-6">
-                    <h5 class="text-white font-weight-bolder mb-4 pt-2">Emergency</h5>
+                <div class="card-body position-relative z-index-1 d-flex flex-column h-80 pl-3 pr-3 pb-3 pt-3 col-lg-6">
+                    <h5 class="text-white font-weight-bolder mb-2 pt-0">Emergency</h5>
                     <p class="text-white">Don't be late to cure yourself. Hurry up!!</p>
-                    <div class="d-flex justify-content-between mt-3">
+                    <div class="d-flex justify-content-between">
                         <!-- Call 911 Button -->
-                        <a href="tel:911" class="btn btn-danger d-flex align-items-center justify-content-center" style="padding: 10px 20px; border-radius: 25px; font-weight: bold; font-size: 14px;">
+                        <a href="tel:911" class="btn btn-danger d-flex align-items-center justify-content-center" style="padding: 5px 20px; border-radius: 25px; font-weight: bold; font-size: 14px;">
                             <i class="fas fa-phone-alt me-2"></i> Call 911
                         </a>
                         <!-- Call McKinley Button -->
-                        <a href="tel:+12173333833" class="btn btn-primary d-flex align-items-center justify-content-center" style="padding: 10px 20px; border-radius: 25px; font-weight: bold; font-size: 14px;">
+                        <a href="tel:+12173333833" class="btn btn-primary d-flex align-items-center justify-content-center" style="padding: 5px 20px; border-radius: 25px; font-weight: bold; font-size: 14px;">
                             <i class="fas fa-phone-alt me-2"></i> Call McKinley
                         </a>
                     </div>
